--- a/mecanica/templates/index.html
+++ b/mecanica/templates/index.html
@@ -57,17 +57,17 @@
       </div>
 
       <li class="nav-item">
-        <a class="nav-link" href="propietarios">
+        <a class="nav-link" href="{% url 'propietario_list' %}">
           <span>Propietarios</span></a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="autos">
+        <a class="nav-link" href="{% url 'auto_list' %}">
           <span>Autos</span></a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="trabajos">
+        <a class="nav-link" href="{% url 'trabajo_list' %}">
           <span>Trabajos</span></a>
       </li>
 
