--- a/mecanica/templates/mecanica/autos_list.html
+++ b/mecanica/templates/mecanica/autos_list.html
@@ -11,9 +11,11 @@
         <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
             <div class="row">
                 <div class="col-sm-12 col-md-6">
+                    {% if user.is_authenticated %}
                     <a href="{% url 'auto_new' %}" class="btn btn-primary btn-icon-split">
                             <span class="text">Agregar Auto +</span>
                     </a>
+                    {% endif %}
                 </div>
             
             </div>
@@ -47,12 +49,14 @@
               <td>{{ auto.modelo }}</td>
               <td>{{ auto.fecha_registro }}</td>              
               <td>
+                  {% if user.is_authenticated %}
                     <a href="{% url 'auto_edit' pk=auto.pk %}" class="btn btn-success btn-icon-split">
                             <span class="text">Actualizar</span>
                     </a>
 
                     <a href="{% url 'detalle_auto' pk=auto.pk %}" class="btn btn-success btn-icon-split" >
                      <span class="text">Ver</span>
+                     {% endif %}
               </a>
               </td>
               {% endfor %}
